--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: AngularMix
 email: jenny@solliance.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description about AngularMix here. 
+  Thank you for joining us at the 2018 Angular Conference! 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: angularmix
